--- a/enhanced-node-network/docker/Dockerfile.mesh-node
+++ b/enhanced-node-network/docker/Dockerfile.mesh-node
@@ -1,1 +1,10 @@
 FROM python:3.10-slim
+
+WORKDIR /app
+
+COPY ../requirements.txt ./requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY .. .
+
+CMD ["python", "-m", "examples.simple_mesh"]
